# api-gateway-boilerplate

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/models/: __init__.py  item.py  user.py
app/routers/: auth.py  items.py  users.py
app/schemas/: item.py  user.py
app/services/: auth.py  crud.py
app/utils/: database.py  deps.py
tests/: conftest.py  test_main.py
